The combination of movie-distortion and lens-distortion leads to artifacts #41785

Closed
opened 2014-09-11 13:05:17 +02:00 by Sebastian Koenig · 5 comments

System Information
OSx 10.9.4 GTX 660ti

Blender Version
Broken: (example: 2.69.7 149ca13)

Short description of error
If you combine the movie-distortion node with a lens-distortion node in a node-tree, it leads to random artifacts.

Exact steps for others to reproduce the error
Open the attached blendfile distortion_lens-distortion.blend
Render and go back to compositor.
Cycle through the frames. Sometimes there should be (red) lines randomly appearing in the composite, see screenshot: Bildschirmfoto_2014-09-11_um_13.02.30.png
(I have replaced the movie input with a solid color to not have to upload the movie. I hope that still works nonetheless)

**System Information** OSx 10.9.4 GTX 660ti **Blender Version** Broken: (example: 2.69.7 149ca13) **Short description of error** If you combine the movie-distortion node with a lens-distortion node in a node-tree, it leads to random artifacts. **Exact steps for others to reproduce the error** Open the attached blendfile [distortion_lens-distortion.blend](https://archive.blender.org/developer/F109873/distortion_lens-distortion.blend) Render and go back to compositor. Cycle through the frames. Sometimes there should be (red) lines randomly appearing in the composite, see screenshot: ![Bildschirmfoto_2014-09-11_um_13.02.30.png](https://archive.blender.org/developer/F109874/Bildschirmfoto_2014-09-11_um_13.02.30.png) (I have replaced the movie input with a solid color to not have to upload the movie. I hope that still works nonetheless)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Sergey Sharybin was assigned by Sebastian Koenig 2014-09-11 13:05:17 +02:00
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k

This issue was referenced by 4bbe0c8cde

This issue was referenced by 4bbe0c8cded98d4daafe1707766041ca9b86db36

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 4bbe0c8cde.

Closed by commit 4bbe0c8cde.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41785
No description provided.