Fix T41785: The combination of movie-distortion and lens-distortion leads to artifacts